WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260470
REGRESSION (
267082@main
): Safari crashes when clicking text inside form controls
https://bugs.webkit.org/show_bug.cgi?id=260470
Summary
REGRESSION (267082@main): Safari crashes when clicking text inside form controls
Wenson Hsieh
Reported
2023-08-21 09:02:08 PDT
rdar://114196908
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-08-21 09:04:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16889
EWS
Comment 2
2023-08-21 15:47:18 PDT
Committed
267108@main
(7b338282b896): <
https://commits.webkit.org/267108@main
> Reviewed commits have been landed. Closing PR #16889 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug