REGRESSION (267082@main): Safari crashes when clicking text inside form controls https://bugs.webkit.org/show_bug.cgi?id=260470 rdar://114196908

Reviewed by Ryosuke Niwa and Richard Robinson.

Don't use `RetainPtr` to protect `WebKit::WebViewImpl`; instead, just turn the `WebViewImpl` pointer
into a `CheckedPtr` to verify that the `WebViewImpl` (like `WebPageProxy`) always outlives this
object. We also wrap both `_page` and `_viewImpl` with a `CheckedPtr` on the stack.

Test:   ImmediateActionTests.ImmediateActionOverText
        ImmediateActionTests.ImmediateActionOverImageOverlay

* Source/WebKit/UIProcess/mac/WKImmediateActionController.h:
* Source/WebKit/UIProcess/mac/WKImmediateActionController.mm:
(-[WKImmediateActionController _clearImmediateActionState]):
(-[WKImmediateActionController dismissContentRelativeChildWindows]):
(-[WKImmediateActionController immediateActionRecognizerWillPrepare:]):
(-[WKImmediateActionController immediateActionRecognizerWillBeginAnimation:]):
(-[WKImmediateActionController immediateActionRecognizerDidUpdateAnimation:]):
(-[WKImmediateActionController immediateActionRecognizerDidCancelAnimation:]):
(-[WKImmediateActionController immediateActionRecognizerDidCompleteAnimation:]):
(-[WKImmediateActionController _webHitTestResult]):
(-[WKImmediateActionController _defaultAnimationController]):
(-[WKImmediateActionController _updateImmediateActionItem]):
(-[WKImmediateActionController _animationControllerForText]):
* Source/WebKit/UIProcess/mac/WebViewImpl.h:

Canonical link: https://commits.webkit.org/267108@main